# threadx-stm32l011

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: stm32l011-toolchain.cmake
src/: main.c
